add static home-cat s

--- a/app/design/frontend/foundation/default/template/catalog/navigation/home-category.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/navigation/home-category.phtml
@@ -57,6 +57,32 @@ $_categories = $this->getCurrentChildCategories(); ?>
     </li>
     <li class="item" data-equalizer-watch>
         <div class="category-image">
+            <a href="<?php echo Mage::getUrl('') . 'hersteller/pacojet'; ?>"
+               title="PacoJet Shop">
+                <img src="<?php echo $this->getSkinUrl('dist/assets/img/pacojet.jpg'); ?>"
+                     alt="PacoJet Shop"/>
+            </a>
+            <h2 class="category-name">
+                <a href="<?php echo Mage::getUrl('') . 'hersteller/pacojet'; ?>"
+                   title="PacoJet Shop">PacoJet Shop</a>
+            </h2>
+        </div>
+    </li>
+    <li class="item" data-equalizer-watch>
+        <div class="category-image">
+            <a href="<?php echo Mage::getUrl('') . 'hersteller/hugentobler'; ?>"
+               title="Hugentobler Shop">
+                <img src="<?php echo $this->getSkinUrl('dist/assets/img/holdomat.jpg'); ?>"
+                     alt="Hugentobler Shop"/>
+            </a>
+            <h2 class="category-name">
+                <a href="<?php echo Mage::getUrl('') . 'hersteller/hugentobler'; ?>"
+                   title="Hugentobler Shop">Hugentobler Shop</a>
+            </h2>
+        </div>
+    </li>
+    <li class="item" data-equalizer-watch>
+        <div class="category-image">
             <a href="<?php echo Mage::getUrl('') . 'altgeraeteentsorgung'; ?>"
                title="Umweltprämie & Abwrackprämie">
                 <img src="<?php echo $this->getSkinUrl('dist/assets/img/abwrackpraemie-400x400.jpg'); ?>"
