add static home-cat s

--- a/app/design/frontend/foundation/default/template/catalog/navigation/home-category.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/navigation/home-category.phtml
@@ -58,26 +58,26 @@ $_categories = $this->getCurrentChildCategories(); ?>
     <li class="item" data-equalizer-watch>
         <div class="category-image">
             <a href="<?php echo Mage::getUrl('') . 'hersteller/pacojet'; ?>"
-               title="PacoJet Shop">
+               title="PacoJet Spezial">
                 <img src="<?php echo $this->getSkinUrl('dist/assets/img/pacojet.jpg'); ?>"
-                     alt="PacoJet Shop"/>
+                     alt="PacoJet Spezial"/>
             </a>
             <h2 class="category-name">
                 <a href="<?php echo Mage::getUrl('') . 'hersteller/pacojet'; ?>"
-                   title="PacoJet Shop">PacoJet Shop</a>
+                   title="PacoJet Spezial">PacoJet Spezial</a>
             </h2>
         </div>
     </li>
     <li class="item" data-equalizer-watch>
         <div class="category-image">
             <a href="<?php echo Mage::getUrl('') . 'hersteller/hugentobler'; ?>"
-               title="Hugentobler Shop">
+               title="Hugentobler Spezial">
                 <img src="<?php echo $this->getSkinUrl('dist/assets/img/holdomat.jpg'); ?>"
-                     alt="Hugentobler Shop"/>
+                     alt="Hugentobler Spezial"/>
             </a>
             <h2 class="category-name">
                 <a href="<?php echo Mage::getUrl('') . 'hersteller/hugentobler'; ?>"
-                   title="Hugentobler Shop">Hugentobler Shop</a>
+                   title="Hugentobler Spezial">Hugentobler Spezial</a>
             </h2>
         </div>
     </li>
