--- a/app/design/frontend/foundation/default/template/catalog/product/list.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/product/list.phtml
@@ -116,6 +116,10 @@ $_helper = $this->helper('catalog/output');
                             <a href="<?php echo Mage::getUrl('', array('_direct' => 'sofortrabatt')); ?>" title="Sofortrabatt 5%">
                                 <img src="<?php echo $this->getSkinUrl('dist/assets/img/sofortrabatt.jpg') ?>" alt="Sofortrabatt 5%"/>
                             </a>
+                            <div class="product-name">
+                                <a href="<?php echo Mage::getUrl('', array('_direct' => 'sofortrabatt')); ?>"
+                                                         title="Sofortrabatt 5%">Erfahren Sie mehr</a>
+                            </div>
                         </li>
                     <?php } ?>
                     <li class="item">
