change ts badge

--- a/app/design/frontend/foundation/default/template/page/html/footer.phtml
+++ b/app/design/frontend/foundation/default/template/page/html/footer.phtml
@@ -286,6 +286,7 @@
         </div>
     </div>
 </footer>
+<div id="GdTrustbadge"></div>
 <?php
 /**
  * This is an example of integrating Trusted Shops Customer Reviews
