change ts badge

--- a/skin/frontend/foundation/default/src/assets/scss/custom/_globals.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_globals.scss
@@ -137,3 +137,8 @@ iframe[name='google_conversion_frame'] {
     text-align: left;
   }
 }
+
+#GdTrustbadge {
+  position: fixed;
+  bottom: 65px;
+}
