add productlist action

--- a/app/design/frontend/foundation/default/template/catalog/product/list.phtml
+++ b/app/design/frontend/foundation/default/template/catalog/product/list.phtml
@@ -118,7 +118,7 @@ $_helper = $this->helper('catalog/output');
                                      alt="Invest-Rabatt 3 Prozent"/>
                             </a>
                             <div class="product-name">
-                                <a class="button hollow margin-top-1"><?php echo $this->__('Hier klicken') ?></a>
+                                <a class="invest button hollow margin-top-1"><?php echo $this->__('Hier klicken') ?></a>
                             </div>
                         </li>
                     <?php } ?>
@@ -167,7 +167,7 @@ $_helper = $this->helper('catalog/output');
                     <?php $i++; ?>
                 <?php endforeach ?>
             </ul>
-            <div class="reveal small" id="osterangebot" data-reveal></div>
+            <div class="reveal small" id="invest" data-reveal></div>
             <script>
                 jQuery('.invest').click(function () {
                     jQuery.ajax({
