update npm packs

--- a/skin/frontend/foundation/default/src/assets/scss/custom/_globals.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_globals.scss
@@ -138,7 +138,6 @@ iframe[name='google_conversion_frame'] {
   }
 }
 
-#GdTrustbadge {
-  position: fixed;
-  bottom: 65px;
+#trustbadge-container-98e3dadd90eb493088abdc5597a70810 {
+  z-index: 999999999 !important; /*equal to tawk*/
 }
