--- a/skin/frontend/foundation/default/src/assets/scss/custom/_product.scss
+++ b/skin/frontend/foundation/default/src/assets/scss/custom/_product.scss
@@ -23,7 +23,7 @@
               font-size: rem-calc(20);
               font-weight: 600;
             }
-            .regular-price {
+            .regular-price, .price-as-configured {
               .price-label {
                 font-size: rem-calc(20);
               }
