--- a/app/design/frontend/foundation/default/template/checkout/cart/item/default.phtml
+++ b/app/design/frontend/foundation/default/template/checkout/cart/item/default.phtml
@@ -34,9 +34,14 @@ $canApplyMsrp = Mage::helper('catalog')->canApplyMsrp($_item->getProduct(), Mage
         <?php if ($_options = $this->getOptionList()): ?>
             <ul>
                 <?php foreach ($_options as $_option) : ?>
+                    <?php $_formatedOptionValue = $this->getFormatedOptionValue($_option) ?>
                     <li>
                         <strong><?php echo $this->escapeHtml($_option['label']) ?> :</strong>
-                        <?php echo Mage::helper('core/string')->truncate(strip_tags($_option['value']), 150) ?>
+                        <?php if (isset($_formatedOptionValue['full_view'])): ?>
+                        <?php echo Mage::helper('core/string')->truncate(strip_tags($_option['value']), 150); ?>
+                        <?php else: ?>
+                        <?php echo $_formatedOptionValue['value']; ?>
+                        <?php endif; ?>
                     </li>
                 <?php endforeach; ?>
             </ul>
